--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,11 +20,32 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  welcome: 'Welcome To the Race Game'
   race_games: 'Race Games'
-  distance: 'Distance'
   start_new_game: 'Start New Game'
   activerecord:
     models:
       race_game: 'Race Game'
     attributes:
-      distance: 'Distance'
+      race_game:
+        distance: 'Distance'
+        total_players: 'Total Players'
+        tick: 'Tick'
+        moved: 'Player moved in current tick'
+        start_next_tick: 'Start Next Tick'
+      race_player:
+        join: 'Join'
+        current_distance: 'Current Distance'
+        your_choice_for_next_move: 'Please Choose Your Next Move'
+        normal: 'normal'
+        super: 'super'
+        your_choice_was: 'Your choice was'
+        your_previous_scars: 'Scars that was on your car'
+        you_went: 'The distance you went in this tick'
+    errors:
+      models:
+        race_move:
+          attributes:
+            tick:
+              taken: 'already moved'
+              greater_than: 'has not started yet'
